Support audio in curtain mode, and use endpoint volume instead of session volume to adjust audio stream

BUG=597320,242312

Review URL: https://codereview.chromium.org/1867213002

Cr-Commit-Position: refs/heads/master@{#386497}

Former-commit-id: fc96e4f848fb4cca37e2da244dc873c1831d70c5